src/test/ui/attributes/unused-item-in-attr.rs
#[w = { extern crate alloc; }]
//~^ ERROR unexpected expression: `{
//~| ERROR cannot find attribute `w` in this scope
fn f() {}

fn main() {}
